# dnd_guide

./: .gitignore  pyproject.toml
src/: alembic.ini  main.py  settings.py
src/adapters/store/sql/: __init__.py  base.py  helper.py  source.py
src/alembic/: env.py
src/application/: exception.py
src/application/use_cases/source/: __init__.py  create.py  delete.py  list.py  model.py  repository.py  retrieve.py  update.py
src/domain/: coins.py  creature.py  creature_size.py  creature_type.py  damage_type.py  dice.py  exception.py  game_time.py  length.py  mixins.py  modifier.py  skill.py  source.py  weapon_property.py  weight.py
src/domain/tests/: test_coins.py  test_creature_size.py  test_creature_type.py  test_length.py  test_skill.py  test_source.py
src/ports/http/: app.py  di.py  exception_handler.py
src/ports/http/router/: __init__.py  coin.py  creature.py  damage.py  dice.py  game_time.py  length.py  modifier.py  skill.py  source.py  weight.py
src/tests/: conftest.py
src/tests/domain/: test_coin.py  test_creature.py  test_damage_type.py  test_dice.py  test_game_time.py  test_modifier.py  test_source.py  test_weapon_property.py  test_weight.py
src/tests/http/: conftest.py  test_enums.py
src/tests/http/source/: test_source.py
src/tests/source/: conftest.py
